--- a/Inv.Common/Inv.Common.csproj
+++ b/Inv.Common/Inv.Common.csproj
@@ -46,8 +46,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Models\Bin.cs" />
+    <Compile Include="Models\Inventory.cs" />
+    <Compile Include="Models\Location.cs" />
     <Compile Include="Models\MeasureUnit.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\TokenResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
