--- a/Inv.Backend/Inv.Backend.csproj
+++ b/Inv.Backend/Inv.Backend.csproj
@@ -196,6 +196,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BinsController.cs" />
+    <Compile Include="Controllers\CountsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ItemsController.cs" />
     <Compile Include="Controllers\LocationsController.cs" />
@@ -275,26 +276,31 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Items\Create.cshtml" />
-    <Content Include="Views\Items\Delete.cshtml" />
-    <Content Include="Views\Items\Details.cshtml" />
-    <Content Include="Views\Items\Edit.cshtml" />
-    <Content Include="Views\Items\Index.cshtml" />
-    <Content Include="Views\MeasureUnits\Create.cshtml" />
-    <Content Include="Views\MeasureUnits\Delete.cshtml" />
-    <Content Include="Views\MeasureUnits\Details.cshtml" />
-    <Content Include="Views\MeasureUnits\Edit.cshtml" />
-    <Content Include="Views\MeasureUnits\Index.cshtml" />
     <Content Include="Views\Locations\Create.cshtml" />
     <Content Include="Views\Locations\Delete.cshtml" />
     <Content Include="Views\Locations\Details.cshtml" />
     <Content Include="Views\Locations\Edit.cshtml" />
     <Content Include="Views\Locations\Index.cshtml" />
+    <Content Include="Views\MeasureUnits\Create.cshtml" />
+    <Content Include="Views\MeasureUnits\Delete.cshtml" />
+    <Content Include="Views\MeasureUnits\Details.cshtml" />
+    <Content Include="Views\MeasureUnits\Edit.cshtml" />
+    <Content Include="Views\MeasureUnits\Index.cshtml" />
     <Content Include="Views\Bins\Create.cshtml" />
     <Content Include="Views\Bins\Delete.cshtml" />
     <Content Include="Views\Bins\Details.cshtml" />
     <Content Include="Views\Bins\Edit.cshtml" />
     <Content Include="Views\Bins\Index.cshtml" />
+    <Content Include="Views\Items\Create.cshtml" />
+    <Content Include="Views\Items\Delete.cshtml" />
+    <Content Include="Views\Items\Details.cshtml" />
+    <Content Include="Views\Items\Edit.cshtml" />
+    <Content Include="Views\Items\Index.cshtml" />
+    <Content Include="Views\Counts\Create.cshtml" />
+    <Content Include="Views\Counts\Delete.cshtml" />
+    <Content Include="Views\Counts\Details.cshtml" />
+    <Content Include="Views\Counts\Edit.cshtml" />
+    <Content Include="Views\Counts\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
