working with controllers and anotations

--- a/Inv.Common/Inv.Common.csproj
+++ b/Inv.Common/Inv.Common.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Models\MeasureUnit.cs" />
+    <Compile Include="Models\Response.cs" />
     <Compile Include="Models\TokenResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
