Sqlite + Modo desconectado

--- a/Inv/Inv/Inv.csproj
+++ b/Inv/Inv/Inv.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Marcos Escudero</Authors>
+    <Company>Grvppe Latam</Company>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
