--- a/Inv.Common/Inv.Common.csproj
+++ b/Inv.Common/Inv.Common.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Models\MeasureUnit.cs" />
     <Compile Include="Models\Response.cs" />
     <Compile Include="Models\TokenResponse.cs" />
+    <Compile Include="Models\UserRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
