--- a/Inv/Inv.Android/Properties/AndroidManifest.xml
+++ b/Inv/Inv.Android/Properties/AndroidManifest.xml
@@ -7,5 +7,5 @@
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-	<application android:label="Inventory"></application>
+	<application android:label="Inventory" android:icon="@drawable/app_icon"></application>
 </manifest>
