--- a/Inv.Backend/Web.config
+++ b/Inv.Backend/Web.config
@@ -9,9 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" 
-         connectionString="Data Source=200.55.241.235;Initial Catalog=grvppelatam;Persist Security Info=True;User=sa;Password=Justo1150" 
-         providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=200.55.241.235;Initial Catalog=grvppelatam;Persist Security Info=True;User=sa;Password=Justo1150" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection_OLD" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Inv.Backend-20180912123811.mdf;Initial Catalog=aspnet-Inv.Backend-20180912123811;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
