--- a/Inv.Backend/packages.config
+++ b/Inv.Backend/packages.config
@@ -37,4 +37,5 @@
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
+  <package id="ZXing.Net.Mobile" version="2.4.1" targetFramework="net461" />
 </packages>
