--- a/Inv/Inv.iOS/Inv.iOS.csproj
+++ b/Inv/Inv.iOS/Inv.iOS.csproj
@@ -171,6 +171,9 @@
       <Version>3.1.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    <PackageReference Include="Xamarin.Forms.Behavior">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="ZXing.Net.Mobile">
       <Version>2.4.1</Version>
     </PackageReference>
